<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO -->
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/premium"
        android:id="@+id/swPremium"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="start"
        android:layout_margin="@dimen/margin"
        />
    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/nameET"
        android:maxLength="20"
        android:imeOptions="actionNext">

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/nameCharCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="@dimen/textCounter"
        android:layout_margin="@dimen/margin"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="@dimen/margin"
        android:text="@string/subname"
        />
    <EditText
        android:id="@+id/subnameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/subnameET"
        android:imeOptions="actionDone"
        android:maxLength="20"/>
    <TextView
        android:id="@+id/subnameCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="@dimen/textCounter"
        android:layout_margin="@dimen/margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="@dimen/margin"
        android:text="@string/gender"
        />
    <RadioGroup
        android:id="@+id/RGGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <ImageView
            android:id="@+id/GenderImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/gender"
            android:src="@drawable/ic_mr"
            android:layout_marginHorizontal="@dimen/margin"/>

        <RadioButton
            android:id="@+id/mrRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrGender"
            android:layout_marginHorizontal="@dimen/margin"/>
        <RadioButton
            android:id="@+id/mrsRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrsGender"
            android:layout_marginHorizontal="@dimen/margin"/>
        <RadioButton
            android:id="@+id/msRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msGender"
            android:layout_marginHorizontal="@dimen/margin"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/CBPolitely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/politely"
        android:layout_margin="@dimen/margin"/>
    <Button
        android:id="@+id/BTNGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:text="@string/btnGreet"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:progress="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:max="10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="@dimen/textCounter"
        android:id="@+id/contador"
        android:layout_margin="@dimen/margin"
        android:textColor="@color/colorAccent"/>

</LinearLayout>